# kaiwa-tekina

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  DockerfileAPI  DockerfileWorker  README.md  bot.py  main.py  pyproject.toml  worker.py
app/config/: http_client.py
app/middleware/: access.py  admin.py  text.py  user.py
app/model/: models.py
app/model/schema/: open_ai.py  user.py
app/router/: chat.py  management.py  start.py
app/task/: prune_messages.py
app/util/: initialize.py  messages.py  money.py  placeholder.py  settings.py  stuff.py
app/util/crypto/: initialize.py
app/util/dispatcher/: add_stuff.py  initialize.py  oof.py
app/util/display/: format.py  html.py  tags.py
app/util/lifecycle/: lifecycle_functions.py  start.py
app/util/open_ai/: chat_gpt.py  send_request.py
app/util/query/: message.py  user.py
app/util/settings/: bot.py  shared.py  worker.py
migrations/: env.py
migrations/versions/: 409baf6f2cd4_add_tokens_used_to_message.py  50a912ddb356_initial.py  5d4fa87722a3_initial.py  75602a91da05_make_content_nullable.py  a28dfaf4b7a1_initial.py  c4bf7b117147_make_full_name_nullable.py  c7c595c2f901_make_full_name_not_nullable.py  fbb425aa40b6_initial_2.py
