[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Sax Dhiut", email = "mail@iyxeyl.me"},
]
dependencies = []
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "setuptools>=67.4.0",
    "isort>=5.12.0",
    "wemake-python-styleguide>=0.17.0",
    "mypy>=1.0.1",
    "black>=23.1.0",
    "pre-commit>=3.1.1",
    "vulture>=2.7",
    "pytest>=7.2.1",
]


[tool.pdm.scripts]
start = "python main.py"

[tool.setuptools]
py-modules = []

[tool.mypy]
exclude = [".git", ".idea", ".mypy_cache", ".venv", ".vscode", ".migrations", "alembic"]
pretty = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unreachable = true

[tool.isort]
profile = "black"

[tool.black]
exclude = [".git", ".idea", ".mypy_cache", ".venv", ".vscode", ".migrations", "alembic"]
line-length = 88

[tool.vulture]
exclude = [".git", ".idea", ".mypy_cache", ".venv", ".vscode", ".migrations", "alembic"]



