[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Sax Dhiut", email = "mail@iyxeyl.me"},
]
dependencies = [
    "pydantic>=1.10.5",
    "aiogram==3.0.0b7",
    "httpx>=0.23.3",
    "SQLAlchemy>=2.0.4",
    "asyncpg>=0.27.0",
    "greenlet>=2.0.2",
    "cryptography>=39.0.2",
    "tiktoken>=0.3.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "setuptools>=67.4.0",
    "isort>=5.12.0",
    "wemake-python-styleguide>=0.17.0",
    "mypy>=1.0.1",
    "black>=23.1.0",
    "pre-commit>=3.1.1",
    "vulture>=2.7",
    "pytest>=7.2.1",
    "alembic>=1.9.4",
]


[tool.pdm.scripts]
start = "python main.py"

[tool.setuptools]
py-modules = []

[tool.mypy]
exclude = [".git", ".idea", ".mypy_cache", ".venv", ".vscode", "migrations", "alembic"]
pretty = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unreachable = true

[tool.isort]
profile = "black"

[tool.black]
exclude = [".git", ".idea", ".mypy_cache", ".venv", ".vscode", "migrations", "alembic"]
line-length = 88

[tool.vulture]
exclude = [".git", ".idea", ".mypy_cache", ".venv", ".vscode", "migrations", "alembic"]
ignore_names = ["_", "Config", "frozen", "created_at", "cls", "SYSTEM", "orm_mode"]
ignore_decorators = ["@start_router.*", "@chat_router.*", "@management_router.*", "@validator"]


